--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         body {
             font-family: Consolas;
         }
+
+
+
+
+
     </style>
     <script src="/assets/pics/blahaj.jpg">
     </script>
@@ -21,7 +26,20 @@
     <div id="text">
         <ul>
             <li>>Welcome to the cozy nest of BLÅHAJ......</li>
-            <li>>Loading......</li>
+            <li>
+                <script type="text/javascript">
+    function alertMsg(){
+        document.getElementById('1').innerHTML='>Loading......'
+    }
+    setInterval(alertMsg,1000);
+
+                </script>
+                <div id="1"></div>
+            </li>
+
+
+
+
         </ul>
 
     </div>
