--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>在 大厅</title>
+    <title>首页</title>
     <link rel="icon" type="image/x-icon" href="images/ic.svg"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
@@ -38,8 +38,8 @@
     <!-- Intro -->
     <section id="intro" class="wrapper style1 fullscreen fade-up">
         <div class="inner">
-            <h1>忘遮茶馆</h1>
-            <p><a href="http://html5up.net">早上好，中午好，下午好，晚上好，欢迎这个宇宙这个时刻您的到来😋</a>
+            <h1>亚特兰蒂斯</h1>
+            <p>早上好，中午好，下午好，晚上好，欢迎这个宇宙这个时刻您的到来😋
             </p>
             <ul class="actions">
                 <li><a href="#one" class="button scrolly">↓↓↓</a></li>
@@ -54,8 +54,7 @@
             <div class="content">
                 <div class="inner">
                     <h2>我们是谁</h2>
-                    <p>智人（学名：Homo
-                        sapiens），是人属下的唯一现存物种。形态特征比直立人更为进步。分为早期智人和晚期智人。早期智人过去曾叫古人，生活在距今25万～4万年前，主要特征是脑容量大，在1300毫升以上；眉嵴发达，前额较倾斜，枕部突出，鼻部宽扁，颌部前突。一般认为是由直立人进化来的，晚期智人臂不过膝，体毛退化，有语言和劳动，有社会性和阶级性。</p>
+                    <p>鲨鱼，</p>
                     <ul class="actions">
                         <li><a href="starvalley.html" class="button">详情</a></li>
                     </ul>
@@ -68,7 +67,7 @@
                 <div class="inner">
                     <h2>我们在哪儿</h2>
                     <p>地球 太阳系 猎户座旋臂 银河系 可观测宇宙</p>
-                    <p>宇宙很大，人类连一粒沙都不是</p>
+                    <p>宇宙很大，鲨鲨连一粒沙都不是</p>
                     <ul class="actions">
                         <li><a href="starvalley.html" class="button">详情</a></li>
                     </ul>
@@ -80,7 +79,7 @@
             <div class="content">
                 <div class="inner">
                     <h2>我们应该做些什么</h2>
-                    <p>实现共产主义 发现世界真相</p>
+                    <p>这取决于你。</p>
                     <ul class="actions">
                         <li><a href="starvalley.html" class="button">详情</a></li>
                     </ul>
@@ -97,37 +96,33 @@
             <div class="features">
                 <section>
                     <span class="icon solid major fa-code"></span>
-                    <h3>语言</h3>
-                    <p>语言(英文：Language，法文：Langue
-                        )是人类进行沟通交流的表达方式。据德国出版的《语言学及语言交际工具问题手册》，世界上查明的有5651种语言。汉语是全球母语使用人口最多的语言，英语是全球使用最广泛的语言。语言和文字是两个概念，往往是先有语言，后产生文字。</p>
+                    <h3>1</h3>
+                    <p>1</p>
                 </section>
                 <section>
                     <span class="icon solid major fa-lock"></span>
-                    <h3>私有制</h3>
-                    <p>如果有一天消失了，世界又会是怎么样？</p>
+                    <h3>1</h3>
+                    <p>1</p>
                 </section>
                 <section>
                     <span class="icon solid major fa-cog"></span>
-                    <h3>技术</h3>
-                    <p>
-                        技术是制造一种产品的系统知识，所采用的一种工艺或提供的一项服务，不论这种知识是否反映在一项发明、一项外形设计、一项实用新型或者一种植物新品种，或者反映在技术情报或技能中，或者反映在专家为设计、安装、开办或维修一个工厂或为管理一个工商业企业或其活动而提供的服务或协助等方面。</p>
+                    <h3>1</h3>
+                    <p>1</p>
                 </section>
                 <section>
                     <span class="icon solid major fa-desktop"></span>
-                    <h3>科学</h3>
-                    <p>
-                        科学是一个建立在可检验的解释和对客观事物的形式、组织等进行预测的有序的知识系统，是已系统化和公式化了的知识。其对象是客观现象，内容是形式化的科学理论，形式是语言，包括自然语言与数学语言。</p>
+                    <h3>1</h3>
+                    <p>1</p>
                 </section>
                 <section>
                     <span class="icon solid major fa-link"></span>
-                    <h3>联系</h3>
-                    <p>联系是指事物内部各要素之间和事物之间相互影响、相互制约、相互作用的关系。</p>
+                    <h3>1</h3>
+                    <p>1</p>
                 </section>
                 <section>
                     <span class="icon major fa-gem"></span>
-                    <h3>共同体</h3>
-                    <p>人类只有一个地球，各国共处一个世界，个人意识是群体意识在个体上的反映。<br/>
-                        查看<a href="https://www.un.org/zh/about-us/universal-declaration-of-human-rights">《世界人权宣言》</a>
+                    <h3>1</h3>
+                    <p>1<br/>查看<a href="https://www.un.org/zh/about-us/universal-declaration-of-human-rights">《世界人权宣言》</a>
                     </p>
                 </section>
             </div>
@@ -148,14 +143,14 @@
 
                         <li>
                             <h3>地址</h3>
-                            <span>Sol-Ⅲ 太阳系 银河系<br/>
-											忘遮茶馆2147483648 </span>
+                            <span>亚特兰蒂斯 鞑鲨壁 蛤蜊街道 699<br/>
+											</span>
                         </li>
 
                         <li>
                             <h3>Social</h3>
                             <ul class="icons">
-                                <li><a href="https://twitter.com/Go8Asn" class="icon brands fa-twitter"><span
+                                <li><a href="https://twitter.com/BLAHAJist" class="icon brands fa-twitter"><span
                                         class="label">Twitter</span></a></li>
 
                             </ul>
@@ -172,8 +167,8 @@
 <footer id="footer" class="wrapper style1-alt">
     <div class="inner">
         <ul class="menu">
-            <li>步入深渊，天人合一</li>
-            <li>Design: <a href="http://html5up.net">忘遮茶馆</a></li>
+            <li>步入深渊，鲨鲨合一</li>
+            <li>Design: <a href="http://html5up.net">鲨鲨</a></li>
         </ul>
     </div>
 </footer>
