--- a/index2.html
+++ b/index2.html
@@ -168,7 +168,7 @@
     <div class="inner">
         <ul class="menu">
             <li>步入深渊，鲨鲨合一</li>
-            <li>Design: <a href="http://html5up.net">鲨鲨</a></li>
+            <li>Design: <a href="https://twitter.com/BLAHAJist">鲨鲨</a></li>
         </ul>
     </div>
 </footer>
