--- a/index2.html
+++ b/index2.html
@@ -54,7 +54,7 @@
             <div class="content">
                 <div class="inner">
                     <h2>我们是谁</h2>
-                    <p>鲨鱼，</p>
+                    <p>鲨鲨，生活在宇宙里。</p>
                     <ul class="actions">
                         <li><a href="starvalley.html" class="button">详情</a></li>
                     </ul>
