--- a/index2.html
+++ b/index2.html
@@ -54,9 +54,9 @@
             <div class="content">
                 <div class="inner">
                     <h2>我们是谁</h2>
-                    <p>鲨鲨，生活在宇宙里。</p>
+                    <p>鲨鲨。只要相信你自己是鲨鲨，那你就是鲨鲨。</p>
                     <ul class="actions">
-                        <li><a href="starvalley.html" class="button">详情</a></li>
+                        <li><a href="index2.html" class="button">详情</a></li>
                     </ul>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                     <p>地球 太阳系 猎户座旋臂 银河系 可观测宇宙</p>
                     <p>宇宙很大，鲨鲨连一粒沙都不是</p>
                     <ul class="actions">
-                        <li><a href="starvalley.html" class="button">详情</a></li>
+                        <li><a href="index2.html" class="button">详情</a></li>
                     </ul>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                     <h2>我们应该做些什么</h2>
                     <p>这取决于你。</p>
                     <ul class="actions">
-                        <li><a href="starvalley.html" class="button">详情</a></li>
+                        <li><a href="index2.html" class="button">详情</a></li>
                     </ul>
                 </div>
             </div>
@@ -96,38 +96,38 @@
             <div class="features">
                 <section>
                     <span class="icon solid major fa-code"></span>
-                    <h3>1</h3>
-                    <p>1</p>
+                    <h3>语言</h3>
+                    <p>鲨鲨使用任何语言都是被允许的。</p>
                 </section>
                 <section>
                     <span class="icon solid major fa-lock"></span>
-                    <h3>1</h3>
-                    <p>1</p>
+                    <h3>隐私</h3>
+                    <p>鲨鲨理解并尊重鲨鲨的隐私。</p>
                 </section>
                 <section>
                     <span class="icon solid major fa-cog"></span>
-                    <h3>1</h3>
-                    <p>1</p>
+                    <h3>平等</h3>
+                    <p>鲨鲨是鲨鲨。</p>
                 </section>
                 <section>
                     <span class="icon solid major fa-desktop"></span>
-                    <h3>1</h3>
-                    <p>1</p>
+                    <h3>个体</h3>
+                    <p>鲨鲨就是鲨鲨。</p>
                 </section>
                 <section>
                     <span class="icon solid major fa-link"></span>
-                    <h3>1</h3>
-                    <p>1</p>
+                    <h3>联系</h3>
+                    <p>鲨鲨和鲨鲨通过鲨鲨联系在一起。鲨鲨帮助鲨鲨。</p>
                 </section>
                 <section>
                     <span class="icon major fa-gem"></span>
-                    <h3>1</h3>
-                    <p>1<br/>查看<a href="https://www.un.org/zh/about-us/universal-declaration-of-human-rights">《世界人权宣言》</a>
+                    <h3>宣言</h3>
+                    <p><br/>点击查看<a href="https://www.un.org/zh/about-us/universal-declaration-of-human-rights">《世界鲨权宣言》</a>
                     </p>
                 </section>
             </div>
             <ul class="actions">
-                <li><a href="starvalley.html" class="button">详情</a></li>
+                <li><a href="index2.html" class="button">详情</a></li>
             </ul>
         </div>
     </section>
