--- a/loading.html
+++ b/loading.html
@@ -41,7 +41,7 @@
 
 
         </ul>
-<meta http-equiv="refresh" content="3;url= https://blahajist.github.io/index2">
+<meta http-equiv="refresh" content="3;url= https://blahajist.github.io/index">
     </div>
 </div>
 </body>
