--- a/shark.html
+++ b/shark.html
@@ -20,15 +20,15 @@
 <!-- Header -->
 <header id="header">
     <a href="index.html" class="title">亚特兰蒂斯</a>
-    <!--    <nav>-->
-    <!--        <ul>-->
-    <!--            <li><a href="loading.html">大厅</a></li>-->
+        <nav>
+            <ul>
+                <li><a href="index.html">首页</a></li>
     <!--            <li><a href="starvalley.html">星云间</a></li>-->
     <!--            <li><a href="dream.html" >云梦阁</a></li>-->
     <!--            <li><a href="reality.html">现实</a></li>-->
     <!--            <li><a href="elements.html">杂货间</a></li>-->
-    <!--        </ul>-->
-    <!--    </nav>-->
+            </ul>
+        </nav>
 </header>
 
 <!-- Wrapper -->
