--- a/index.html
+++ b/index.html
@@ -101,28 +101,28 @@
                 </section>
                 <section>
                     <span class="icon solid major fa-lock"></span>
-                    <h3>隐私</h3>
-                    <p>鲨鲨理解并尊重鲨鲨的隐私。</p>
+                    <h3>自由</h3>
+                    <p>任何鲨不得加以任意逮捕、拘禁或放逐。</p>
                 </section>
                 <section>
                     <span class="icon solid major fa-cog"></span>
                     <h3>平等</h3>
-                    <p>鲨鲨是鲨鲨。</p>
+                    <p>法律之前鲨鲨平等，并有权享受法律的平等保护，不受任何歧视。鲨鲨有权享受平等保护，以免受违反本宣言的任何歧视行为以及煽动这种歧视的任何行为之害。</p>
                 </section>
                 <section>
                     <span class="icon solid major fa-desktop"></span>
                     <h3>个体</h3>
-                    <p>鲨鲨就是鲨鲨。</p>
+                    <p>鲨鲨生而自由，在尊严和权利上一律平等。</p>
                 </section>
                 <section>
                     <span class="icon solid major fa-link"></span>
-                    <h3>联系</h3>
-                    <p>鲨鲨和鲨鲨通过鲨鲨联系在一起。鲨鲨帮助鲨鲨。</p>
+                    <h3>关系</h3>
+                    <p>鲨鲨赋有理性和良心，并应以兄弟关系的精神相对待。</p>
                 </section>
                 <section>
                     <span class="icon major fa-gem"></span>
                     <h3>宣言</h3>
-                    <p><br/>点击查看<a href="https://www.un.org/zh/about-us/universal-declaration-of-human-rights">《世界鲨权宣言》</a>
+                    <p><br/>点击查看<a href="shark.html">《世界鲨权宣言》</a>
                     </p>
                 </section>
             </div>
