--- a/shark.html
+++ b/shark.html
@@ -97,8 +97,7 @@
                     <hr>
                     <h2 class="heading-underlined-blue">第七条</h2>
 
-                    <p>
-                        　　法律之前鲨鲨平等，并有权享受法律的平等保护，不受任何歧视。鲨鲨有权享受平等保护，以免受违反本宣言的任何歧视行为以及煽动这种歧视的任何行为之害。</p>
+                    <p>　　法律之前鲨鲨平等，并有权享受法律的平等保护，不受任何歧视。鲨鲨有权享受平等保护，以免受违反本宣言的任何歧视行为以及煽动这种歧视的任何行为之害。</p>
                     <hr>
                     <h2 class="heading-underlined-blue">第八条</h2>
 
