--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <h2>我们是谁</h2>
                     <p>鲨鲨。只要相信你自己是鲨鲨，那你就是鲨鲨。</p>
                     <ul class="actions">
-                        <li><a href="index2.html" class="button">详情</a></li>
+                        <li><a href="index.html" class="button">详情</a></li>
                     </ul>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                     <p>地球 太阳系 猎户座旋臂 银河系 可观测宇宙</p>
                     <p>宇宙很大，鲨鲨连一粒沙都不是</p>
                     <ul class="actions">
-                        <li><a href="index2.html" class="button">详情</a></li>
+                        <li><a href="index.html" class="button">详情</a></li>
                     </ul>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                     <h2>我们应该做些什么</h2>
                     <p>这取决于你。</p>
                     <ul class="actions">
-                        <li><a href="index2.html" class="button">详情</a></li>
+                        <li><a href="index.html" class="button">详情</a></li>
                     </ul>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                 </section>
             </div>
             <ul class="actions">
-                <li><a href="index2.html" class="button">详情</a></li>
+                <li><a href="index.html" class="button">详情</a></li>
             </ul>
         </div>
     </section>
